@@ -47,7 +47,7 @@ qt3_qmake_compile() {
 	cygmake
 }
 
-# FIXME: This won't work for most packages!!!
+# Warning: This won't work for most packages!!!
 qt3_qmake_install() {
 	local dll pc
 
